# vdrPlus

./: CMakeLists.txt  README.md  icons.cpp  icons.h  icons2.cpp  icons2.h  vdrPlus_pi.fbp
gimp/: vdrPlus.white.xcf  vdrPlus.xcf
src/: icons.cpp  icons.h  vdrPlus_pi.cpp  vdrPlus_pi.h  vdrPlusgui.cpp  vdrPlusgui.cpp.bak  vdrPlusgui.h  vdrPlusgui.h.bak  vdrPlusgui_impl.cpp  vdrPlusgui_impl.h
